Fix up some alignment and class names

--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -15,6 +15,9 @@ body {
   width: 100%;
   height: 100%;
 }
+.event-edit__lead-in {
+  margin-bottom: 40px;
+}
 .event-edit__content {
   @extend .panel-content;
   @include panel-image("fruitandveg-faded-40.jpg", $gray);
@@ -24,6 +27,9 @@ body {
   font-size: 30px;
   font-weight: normal;
   color: $white;
+}
+.event-edit__price {
+  font-size: 32px;
 }
 .event-edit__book-btn {
   @extend .btn-primary;
